Home spacing fix

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -234,10 +234,12 @@ pre {
 @media screen and (max-width: $on-palm) {
     .name {
         font-size: 4em;
+        letter-spacing: -5px;
     }
     
     .subtitle {
         font-size: 2em;
+        margin-top: -40px;
     }
     
     .trigger a {
